[package]
name = "padlock"
version = "0.1.0"
authors = ["javonlee22 <javonlee411@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "^0.2"
rpassword = "5.0"
base64 = "0.13.0"
rusqlite = "0.24.1"